@@ -17,7 +17,7 @@ passed as path-info and thus as virtual paths.
 
 The following HTTP methods must be allowed: `CONNECT`, `OPTIONS`, `GET`, `PUT`,
 `PATCH`, `POST`, `DELETE` The `CONNECT` method is not an HTTP standard,
-alternative `TOUCH` or `PUT` can be used.
+alternative `PUT` can be used.
 
 > [!IMPORTANT]
 > __When using PHP as CGI, the HTTP methods may also need to be allowed.__
