@@ -5,6 +5,8 @@ BF: Build: Correction of the version number distribution
     Dockerfile was forgotten.
 CR: Build: Added build and publish the Docker images
 CR: Content: Added snake.html as example abd little gimmick
+CR: Service: Omission of the HTTP method TOUCH
+    Because it is not an official HTTP standard.
 
 1.5.0 20241027
 BF: Build: Review and optimization
